fixed greyH not being centered on smaller devices

--- a/home.css
+++ b/home.css
@@ -39,7 +39,7 @@
   position: absolute;
   padding: 10px;
   margin-left: -150px;
-  width: 150px;
+  width: 135px;
   height: 100vh;
   text-align: center;
   background-color: rgba(255,255,255,0.6);
@@ -49,6 +49,7 @@
 
 .sidebar ul {
   margin-top: 75px;
+  text-align: center;
 }
 
 .sidebar ul li {
@@ -60,7 +61,7 @@
   font-size: 15px;
   margin-top: 10px;
   text-align: center;
-  padding-top: 10px;
+  padding: 10px;
   display: block;
 }
 
@@ -75,7 +76,7 @@
 }
 
 .toggleBtnActive {
-  margin-left: 150px;
+  margin-left: 75px;
 }
 
 .center {
@@ -100,7 +101,7 @@
 .greyH {
   height: 20px;
   width: 20px;
-  margin: 10px;
+  margin-top: 10px;
 }
 
 .contactImg {
